--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "files.eol": "\n",
     "bitbake.pathToBitbakeFolder": "/workspaces/poky/bitbake",
     "bitbake.pathToEnvScript": "/workspaces/poky/oe-init-build-env",
     "bitbake.pathToBuildFolder": "/workspaces/poky/build",
